# pri-auth-service

./: .env  .gitignore  Cargo.toml  docker-compose.yml
data/: postmaster.pid
data/base/13468/: 1247  1249  1259  16384  16390  16391  16399  16401  16412  16413  16415  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  3501  3502  3503  3534  5002  pg_internal.init
data/global/: pg_control  pg_internal.init
data/pg_stat_tmp/: db_0.stat  db_13468.stat  global.stat
migrations/: 20240914142819_create_user_table.down.sql  20240914142819_create_user_table.up.sql
src/: lib.rs  main.rs
src/controllers/: auth_handler.rs  mod.rs
src/domain/: auth.rs  mod.rs
src/domain/dto/: login_request.rs  login_response.rs  mod.rs  signup_request.rs
src/domain/utils/: mod.rs  user_status.rs
src/repositories/: user_repository.rs
src/services/: user_service.rs
src/utils/: hash.rs
