[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
async-trait = "0.1.82"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
rust-argon2 = "2.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-async-std-native-tls"] }
thiserror = "1.0.63"
validator = { version = "0.18.1", features = ["derive"] }
